@@ -18,6 +18,12 @@ This is the third beta release of DDD 3.1, fixing some minor bugs:
 - Creating large plots could freeze DDD under certain circumstances.
 - The builtin plot is much faster.
 
+
+There are also some minor new features:
+
+- The maximum size of the undo buffer can be configured at run-time.
+
+
 See the DDD ChangeLog for more details.
 
 
